ENG-940 Fix alignment of language selection dropdown

--- a/admin-console/src/main/webapp/resources/administration/css/entando-admin-console-default-theme.css
+++ b/admin-console/src/main/webapp/resources/administration/css/entando-admin-console-default-theme.css
@@ -1219,7 +1219,7 @@ td{
     width: 12px !important;
     margin-left: 3px;
 }
-#userDropdown a, #preview-portal a, #infoHeader a {
+#userDropdown a, #preview-portal a, #infoHeader a, #languageDropdown a {
     padding: 15px;
     margin-top: 5px;
     line-height: 20px;
